Lesson 15. Implement CurrencyClient logic
