# product-api/handlers/index.go
@@ -14,11 +14,16 @@ import (
 
 // Index handles GET requests and returns all current products
 func (p *Products) Index(rw http.ResponseWriter, r *http.Request) {
-	products := data.GetProducts()
+	currency := r.URL.Query().Get("currency")
+
+	products, err := p.data.GetProducts(currency)
+	if err != nil {
+		http.Error(rw, "Unable get products", http.StatusInternalServerError)
+	}
 
 	rw.Header().Add("Content-Type", "application/json")
 
-	err := data.ToJSON(products, rw)
+	err = data.ToJSON(products, rw)
 	if err != nil {
 		http.Error(rw, "Unable to marshall json", http.StatusInternalServerError)
 	}
